--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@dynamic-labs/ethereum": "*",
+    "@dynamic-labs/ethereum-aa": "^1.4.11",
     "@dynamic-labs/sdk-react-core": "*",
+    "@dynamic-labs/solana": "^1.4.11",
     "@dynamic-labs/wagmi-connector": "*",
     "@types/node": "20.5.4",
     "@types/react": "18.2.25",
