--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@dynamic-labs/sdk-react-core": "*",
     "@dynamic-labs/solana": "^1.4.11",
     "@dynamic-labs/wagmi-connector": "*",
+    "@gatefi/js-sdk": "^0.18.0",
     "@types/node": "20.5.4",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "crypto-browserify": "^3.12.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
